<resources>
    <string name="app_name">Momentum</string>
    <string name="log_tag">CMPE137</string>
    
    <string name="facebook_app_id">104512003249778</string>
    
    <string name="action_settings">Settings</string>

    <!-- Sign Up -->
    <string name="name_label">Full Name</string>
    <string name="sign_up_label">SIGN UP</string>

    <string name="save">Save</string>
    <string name="cancel">Cancel</string>

    <!--Login-->
    <string name="email_label">Email</string>
    <string name="password_label">Password</string>
    <string name="login_label">SIGN IN</string>
    <string name="login_with_facebook">Log in with Facebook</string>
    <string name="signup_link_label">Not a member? Sign up here.</string>
    <string name="signin_link_label">Already a member? Sign in here.</string>
    <string name="login_progress">Authenticating…</string>

    <!--Errors-->
    <string name="error_invalid_password">Invalid password.</string>
    <string name="error_incorrect_password">Incorrect password</string>
    <string name="error_invalid_email">Invalid email.</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="new_album">New Album</string>
    <string name="search">Search</string>
    <string name="search_hint">Search photos and albums</string>

    <string name="title_activity_searchable">Search</string>
    <string name="title_activity_NewAlbum">New Album</string>

    <string name="dumb_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc sollicitudin vestibulum suscipit. Donec ornare ligula tellus, et scelerisque magna luctus sit amet. Cras ullamcorper pellentesque metus quis viverra. Mauris et ante in diam accumsan eleifend vel vitae leo. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos.</string>
    <string name="edit_album">Edit Album</string>
    <string name="delete_album">Delete Album</string>
    <string name="album_by">by</string>
    <string name="error_invalid_name">Invalid Name</string>
    <string name="error_invalid_name_number">Number not allowed</string>
    <string name="error_invalid_password_upper_case">Password must have at least one upper case letter</string>
    <string name="error_invalid_password_lower_case" >Password must have at least one lower case letter</string>
    <string name="error_invalid_password_number" >Password must have at least one number</string>
    <string name="error_invalid_password_special_char" >Password must have at least one special character</string>
    <string name="send_progress">Sending…</string>

</resources>
